# omnix-mvp

./: .dockerignore  .env.example  .pre-commit-config.yaml  DEMO_SCRIPT.md  DEPLOY.sh  Dockerfile  Makefile  Procfile  README.md  SETUP_GUIDE.md  docker-compose.yml  nginx.conf  omnix_cli.py  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: connector_manager.py  device_store.py  server.py  server_simple.py  test_pi_connection.py  workspace_store.py
backend/connectors/: __init__.py  arduino_serial.py  base.py  esp32_wifi.py  mavlink.py  pi.py  registry.json  ros2_bridge.py  tello.py
backend/custom_build/: __init__.py  builder.py  device.py  parts.py
backend/devices/: __init__.py  base.py  drone.py  pi_agent.py  pi_bridge.py  robot_arm.py  smart_light.py
backend/movements/: executor.py  presets.py
backend/omnix/: __init__.py  config.py  errors.py  logging_setup.py  middleware.py  models.py  state.py
backend/simulation/: __init__.py  physics.py  runner.py  scenarios.py
backend/templates/: __init__.py  library.py
backend/tests/: conftest.py  test_ai_module.py  test_auth.py  test_behavior_tree.py  test_collab.py  test_connector_manager.py  test_connector_state.py  test_custom_build.py  test_db.py  test_digital_twin.py  test_e2e.py  test_errors.py  test_marketplace.py  test_physics.py  (+5 more)
docs/: PLUGIN_GUIDE.md
firmware_store/: metadata.json
frontend/: demo.html  fleet.html  index.html  landing.html  motion3d.html  pi.html  stats.html  vpe.html
scripts/: run_tests.py
sdk/: omnix_sdk.py
(+106 files in other folders)
