[project]
name = "omnix"
version = "0.2.0"
description = "OMNIX — Universal Robotics Control Platform"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OMNIX" }]

dependencies = [
    "opencv-python>=4.8,<5.0",
    "numpy>=1.24,<3.0",
    "pyserial>=3.5,<4.0",
    "pymavlink>=2.4,<3.0",
    "websockets>=12.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.1,<1.0",
]

[project.scripts]
omnix = "server_simple:main"

# ── Test config ──
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: tests that take more than ~1s",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/connectors/firmware/*",
]

# ── Ruff (linter + formatter) ──
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Keep defaults + a handful of high-signal rules. Explicitly skip some that
# clash with patterns the codebase already uses (long lines in URL specs,
# dataclass default factories).
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length — we don't hard-enforce
    "B008",  # function calls in argument defaults (common for dataclass fields)
    "SIM108", # if/else → ternary (not always clearer)
]
